--- a/JenkinsFile
+++ b/JenkinsFile
@@ -11,7 +11,7 @@ pipeline {
                     sh 'java --version'
                     sh 'gradle --version'
                     sh 'ls -ltr'
-                    sh 'gradle build .'
+                    sh 'gradle build'
                 }
             }
         }
