--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@
 reports/
 
 # Package Files #
-*.jar
+#*.jar
 *.war
 *.nar
 *.ear
@@ -182,7 +182,7 @@ Temporary Items
 .mtj.tmp/
 
 # Package Files #
-*.jar
+#*.jar
 *.war
 *.nar
 *.ear
