--- a/JenkinsFile
+++ b/JenkinsFile
@@ -12,7 +12,7 @@ pipeline {
                     sh 'gradle --version'
                     sh 'ls -ltr'
                     sh 'gradle build'
-                    sh './gradlew build'
+                    sh './gradlew cucumber'
                 }
             }
         }
